fixed overflow for oh shoot

--- a/ohShoot/ohShoot.css
+++ b/ohShoot/ohShoot.css
@@ -185,11 +185,6 @@
     /* background-color: orange; */
 }
 
-.movesMade {
-    margin-top: 5px;
-    font-size: 2vw;
-}
-
 .modeButtons {
     margin-left: 10px;
     margin-right: 10px;
@@ -220,6 +215,11 @@
     background-color: grey;
 }
 
+.movesMade {
+    margin-top: 5px;
+    font-size: 2vw;
+}
+
 
 /* 
 #easyButton:hover {
@@ -231,7 +231,7 @@ padding: 5px 7px;
 } */
 
 .comments {
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
 
 .mainEnemy {
