--- a/styleSheets/home.css
+++ b/styleSheets/home.css
@@ -8,7 +8,7 @@ main {
     display: grid;
     gap: 10px 10px;
     margin-top: 60px;
-    grid-template: 1fr 2fr 2fr / 1fr 1fr;
+    grid-template: 5vw 2fr 2fr / 1fr 1fr;
         width: 96%;
         margin-left: 2%;
 }
